<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.splash.WelcomeActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tV_howGeeky"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_margin="35dp"
        android:id="@+id/textView_HowGeeky" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="300dp"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="horizontal">
    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/btn_ExitQuiz"
        android:id="@+id/btn_ExitQuiz" />
    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:text="@string/btn_StartQuiz"
        android:id="@+id/btn_StartQuiz" />
</LinearLayout>

</LinearLayout>
