<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.splash.QuizActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"

        android:id="@+id/tv_QuestionNumber" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/Image_Description"
        android:id="@+id/iv_QuestionImage" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@color/colorBlack"
      android:id="@+id/tv_QuestionText" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rb_AnswerOptions">

    </RadioGroup>
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_margin="10dp"
       android:layout_gravity="center_horizontal"
       >
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/btn_Quit"
           android:id="@+id/btn_Quit" />
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="50dp"
           android:text="@string/btn_Next"
           android:id="@+id/btn_Next" />

   </LinearLayout>


</LinearLayout>
